# QuiplashTelegramBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.prod.env  composer.json  deploy.sh  docker-compose.yml  entrypoint.sh  logs.sh  migrate.sh  run.sh  todo.txt  webhook.http
app/: AppKernel.php  questions.json
app/DoctrineMigrations/: Version20171017053841.php  Version20171019045629.php  Version20171022044717.php  Version20171030034203.php  Version20171031034124.php  Version20171102035711.php  Version20171111231725.php  Version20180319000041.php
app/config/: config.yml  config_dev.yml  config_prod.yml  config_test.yml  parameters.yml.dist  parameters_prod.php  security.yml  services.yml
certbot/: Dockerfile  entrypoint.sh
dyndns/: Dockerfile  config.json
nginx/: Dockerfile  index.html  nginx.conf
nginx/js/: app.js  error.js  main.js  prompt.js  util.js
postgres/: Dockerfile  ddl.sql
src/: config.rs  handler.rs  main.rs  router.rs
src/AppBundle/: EventSubscriber.php  ExceptionListener.php  GameManager.php  LoggedClient.php  MiddlewarePersister.php  StubClient.php  TelegramEmulator.php
src/AppBundle/Command/: AppCacheCreateCommand.php  AppLoadQuestionsCommand.php  AppRegisterCommand.php  AppTestSayCommand.php
src/AppBundle/Controller/: QuiplashController.php  TelegramController.php
src/chat/: mod.rs
src/controller/: mod.rs  test.rs
src/game/: mod.rs
src/persistence/: answer.rs  game.rs  mod.rs  postgres.rs  question.rs  user.rs  vote.rs
src/threadpool/: mod.rs
tests/: test.http
web/: app_test.php
(+38 files in other folders)
