[package]
name = "app"
version = "0.1.0"
authors = ["Brian Payne <brian@southroute.com"]
edition = "2018"

[dependencies]
libpq = { git = "https://github.com/bayne/libpq.rs", branch = "arm-fix" }
log = "0.4"
env_logger = "0.8.2"
rustls = "0.19.0"
webpki = "0.21.4"
webpki-roots = "0.21.0"
httparse = "1.3.4"
http = "0.2.1"
serde_json = "1.0"
regex = "1.4.2"
uuid = { version = "0.8.1", features = ["v4"]}
rand = "0.8.3"

[[bin]]
name = "app"
path = "./src/main.rs"
